# nko-brain-scanner

./: .gitignore  ARCHITECTURE.md  EVOLUTION.md  PULSE-PLAN.md  README.md  download_results.sh  estimate_cost.py  model_card.md  pyproject.toml  requirements.txt  run_twostage_profiler.py  run_world_generation.py  setup_vastai.sh  upload_to_hf.py
arxiv-submission/: SUBMIT_INSTRUCTIONS.md  main.tex
asr/: __init__.py  audio_encoder.py  audio_pipeline.py  bambara_translator.py  beam_search_decoder.py  bridge_to_nko.py  char_level_train.py  cleanup_uploaded.sh  complete_ocr_pipeline.sh  concurrent_train.py  concurrent_train_v2.py  convert_lora_to_ggml.py  deploy_v5_vastai.sh  download_afvoices.py  download_djoko.py  dynamic_ocr_pipeline.py  eval_bam_test.py  eval_v5.py  eval_vs_maliba.py  eval_whisper_lora.py  experiment_loop.py  extract_afvoices_features.py  gcs_ocr_pipeline.py  generate_synthetic_eval.py  joint_embedding.py  mesh_overflow.sh  ocr_comparison.py  postprocess.py  prepare_nllb_data.py  prepare_v5_data.py  rebridge_djoko.py  retrieval_asr_model.py  retrieval_asr_v2.py  round_trip_eval.py  scene_encoder.py  speaker_diarizer.py  stream_with_features.py  streaming_gpu_pipeline.py  submit_leaderboard.py  syllable_retriever.py  (+11 more)
blog/: README.md  blog-nko-asr-pipeline.md  blog-nko-dead-circuits-accessible.md  experiment-a-cross-model-brain-scan.md  experiment-b-script-advantage.md  experiment-d-sigil-compression.md  experiment-e-epoch-inscription.md  index.md  post.md
constrained/: __init__.py  eval_admissibility.py  gk_scorer.py  logits_processor.py  nko_fsm.py
data/: build_corpus.py  gk_seed_checkpoint.json  nko_collocations.json  nko_lexicon.json  nko_merged_corpus.txt  parallel_corpus.jsonl  scrape_nko_wiki.py  syllable_codebook.json  synthetic_eval_pairs.json
demo/: app.py  realtime_asr.py
docs/: _config.yml  index.md
eval/: build_eval_set.py  english_eval.jsonl  nko_eval.jsonl  run_corrected_profiler.py  run_v3_generation.py  run_v3_profiler.py
experiments/: MASTER_PLAN.md  requirements.txt
figures/: generate_figures.py
models/: README.md  config.json  inference.py
nko/: __init__.py  __main__.py  cli.py  cultural_tools.py  culture.py  morphology.py  phonetics.py  predict.py  sigils.py  transliterate.py  voice.py
nko_core/: __init__.py  syllable_codebook.py
paper/: PAPER_ROADMAP.md  README.md  asr_paper_draft.md  main.tex  references.bib  (+3 more)
(+318 files in other folders)
